--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "RESTInPeace",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "main": "app.js",
   "dependencies": {
-    "cookie-parser": "~1.4.3",
     "body-parser": "^1.15.2",
+    "cookie-parser": "~1.4.3",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5",
