--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "RESTInPeace",
   "version": "1.0.0",
   "main": "app.js",
+  "repository": "https://github.com/CSC309-Fall-2016/RESTInPeace",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "cookie-parser": "~1.4.3",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5",
     "nodemon": "^1.11.0"
