--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "repository": "https://github.com/CSC309-Fall-2016/RESTInPeace",
   "dependencies": {
-    "bcrypt": "^0.8.7",
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "cookie-parser": "~1.4.3",
     "dotenv": "^2.0.0",
