--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "express-validator": "^3.0.0",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5",
     "mongoose-unique-validator": "^1.0.3",
