--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "mongoose": "^4.6.5",
     "mongoose-unique-validator": "^1.0.3",
     "nodemon": "^1.11.0"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
