added some startup scripts

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^1.11.0"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "mongod --dbpath data  && --fork node app.js",
+    "reseed": "mongod --dbpath data  && --fork node app.js reseed"
   }
 }
