--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "nodemon": "^1.11.0"
   },
   "scripts": {
-    "start": "mongod --dbpath data  && --fork node app.js",
-    "reseed": "mongod --dbpath data  && --fork node app.js reseed"
+    "start": "mongod --dbpath data --fork --logpath data/mongodb.log  &&  node app.js",
+    "reseed": "mongod --dbpath data --fork --logpath data/mongodb.log  &&  node app.js reseed",
+    "nodemon": "mongod --dbpath data --fork --logpath data/mongodb.log &&  nodemon",
+    "poststop": "mongo admin --eval 'db.shutdownServer()'"
   }
 }
